# ProLIF_Coloring

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
include/: Discretizer.hpp  DistanceInteraction.hpp  HBInteraction.hpp  HydrophobicInteraction.hpp  Interaction.hpp  InteractionCollection.hpp  InteractionMask.hpp  IonicInteraction.hpp  MetalInteraction.hpp  MoleculeMesh.hpp  SingleAngleInteraction.hpp
include-base/: Discretizer.hpp  DistanceInteraction.hpp  Interaction.hpp  InteractionCollection.hpp  Mesh.hpp  RestrictedBasePIStackingInteraction.h  SingleAngleInteraction.hpp  Transformer.hpp
include-extended/: HBInteraction.hpp  HydrophobicInteraction.hpp  IonicInteraction.hpp  MetalInteraction.hpp
src/: DistanceInteraction.cu  InteractionCollection.cpp  Mesh.cu  SingleAngleInteraction.cu
src-cuda/: DistanceInteraction.cu  Mesh.cu
src-normal/: DistanceInteraction.cpp  DistanceInteraction_Compute.cpp  DistanceInteraction_Pattern.cpp  Mesh.cpp  SingleAngleInteraction.cpp
src-omp/: DistanceInteraction.cpp  DistanceInteraction_Compute.cpp  DistanceInteraction_Pattern.cpp  Mesh.cpp  SingleAngleInteraction.cpp
src_cuda/: SingleAngleInteraction.cu
